; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/unbound/services/extr_authzone.c_chunk_rrlist_start.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/unbound/services/extr_authzone.c_chunk_rrlist_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.auth_xfer = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.auth_chunk* }
%struct.auth_chunk = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.auth_xfer*, %struct.auth_chunk**, i32*, i64*)* @chunk_rrlist_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @chunk_rrlist_start(%struct.auth_xfer* %0, %struct.auth_chunk** %1, i32* %2, i64* %3) #0 {
  %5 = alloca %struct.auth_xfer*, align 8
  %6 = alloca %struct.auth_chunk**, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i64*, align 8
  store %struct.auth_xfer* %0, %struct.auth_xfer** %5, align 8
  store %struct.auth_chunk** %1, %struct.auth_chunk*** %6, align 8
  store i32* %2, i32** %7, align 8
  store i64* %3, i64** %8, align 8
  %9 = load %struct.auth_xfer*, %struct.auth_xfer** %5, align 8
  %10 = getelementptr inbounds %struct.auth_xfer, %struct.auth_xfer* %9, i32 0, i32 0
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load %struct.auth_chunk*, %struct.auth_chunk** %12, align 8
  %14 = load %struct.auth_chunk**, %struct.auth_chunk*** %6, align 8
  store %struct.auth_chunk* %13, %struct.auth_chunk** %14, align 8
  %15 = load i32*, i32** %7, align 8
  store i32 0, i32* %15, align 4
  %16 = load i64*, i64** %8, align 8
  store i64 0, i64* %16, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
